--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://localhost:9000/assets/css/main.css">
 </head>
 <body>
     <h1>Hello world</h1>
-    <script src="assets/js/main.js"></script>
+    <script src="http://localhost:9000/assets/js/main.js"></script>
 </body>
 </html>
